# domainder

./: .gitignore  Cargo.toml  Readme.md  todo.md
config/: email.example.json
src/: main.rs
src/domain/: config.rs  domain.rs  mod.rs  result.rs  whois.rs
src/reminder/: mod.rs  remind.rs  result.rs
src/send/: mod.rs  remind.rs  send.rs
