[package]
name = "domainder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.22" }
clap = { version = "4.0.12", features = ["derive"] }
lettre = "0.10"
whois-rust = "1.5.0"
reqwest = "0.11.12"
tokio = {version = "1.21.2", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.86"